[package]
name = "datagram-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
quinn = "0.12"
rcgen = "0.14"
socket2 = "0.6"
tikv-jemallocator = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }

[patch.crates-io]
quinn = { git = "https://github.com/alessandrod/quinn.git", rev = "b8a0db8389be9238fbf53bc04a4e7ae8d6c6192a" }
quinn-proto = { git = "https://github.com/alessandrod/quinn.git", rev = "b8a0db8389be9238fbf53bc04a4e7ae8d6c6192a" }
[profile.release]
debug = 2
