[package]
name = "datagram-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
quinn = "0.12"
rcgen = "0.14"
socket2 = "0.6"
tikv-jemallocator = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }

[patch.crates-io]
quinn = { git = "https://github.com/alessandrod/quinn.git", rev = "b620ebbbdfdc2577c67e3b8b4c55b7b8c2abab96" }
quinn-proto = { git = "https://github.com/alessandrod/quinn.git", rev = "b620ebbbdfdc2577c67e3b8b4c55b7b8c2abab96" }
[profile.release]
debug = true
strip = false
split-debuginfo = "off"
